# advent-of-code-2023

./: .gitignore  README.md  justfile  shell.nix
day-1/: Cargo.toml  README.md
day-1/src/: main.rs
day-10/: README.md
day-10/src/: main.rs
day-11/: README.md
day-11/src/: main.rs
day-12/: Cargo.toml  README.md  test2
day-12/src/: main.rs
day-13/src/: main.rs
day-14/src/: main.rs
day-2/: Cargo.toml  README.md
day-2/src/: main.rs
day-3/: Cargo.toml  README.md
day-3/src/: main.rs
day-4/: Cargo.toml  README.md  perf.data.old
day-4/src/: main.rs
day-5/: README.md
day-5/src/: main.rs
day-6/: :w  Cargo.toml  README.md  test2
day-6/src/: main.rs
day-7/: README.md
day-7/src/: main.rs
day-8/: Cargo.toml  README.md
day-8/src/: main.rs
day-9/: README.md
day-9/src/: main.rs
